Bug 344653 - Saving-as modified Kexi object does not remove its "dirty" flag
Summary: Saving-as modified Kexi object does not remove its "dirty" flag
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.9.0
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: 2.9.2
Assignee: Roman Shtemberko
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2015-02-28 10:27 UTC by Jarosław Staniek
Modified: 2015-04-22 22:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.3
Sentry Crash Report:


Attachments
Situation after query2 was saved-as query31. (3.07 KB, image/png)
2015-02-28 10:29 UTC, Jarosław Staniek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jarosław Staniek 2015-02-28 10:27:56 UTC
Saving-as modified Kexi object does not remove its "dirty" flag.

Reproducible: Always

Steps to Reproduce:
1. Open any object (eg. q query) in the design view
2. Modify the object slightly so "*" dirty flag appears in he project navigator
3. "Save As" the object


Actual Results:  
The original name still has the "*" flag attached

Expected Results:  
The original name should not have the "*" flag attached since it's not opened -- the new object is actually opened.

Applies to any objects available for save-as context command, actually everything but tables. 
This is general logic issue.
Comment 1 Jarosław Staniek 2015-02-28 10:29:16 UTC
Created attachment 91339 [details]
Situation after query2 was saved-as query31.
Comment 2 Roman Shtemberko 2015-03-09 16:16:23 UTC
It seems to me that it will be more "logical" not to save original object after "Save As" operation, e.g. LibreOffice just opens newly created (by Save As) object and not saving original one. What do you think?
Comment 3 Jarosław Staniek 2015-03-10 08:23:52 UTC
@Roman for comparison let's look at Windows' Notepad or KDE's Kate. They seem to work as Kexi does.
Comment 4 Jarosław Staniek 2015-03-10 08:25:58 UTC
> LibreOffice just opens newly created (by Save As) object and not saving original one

Tried LibreOffice Calc and it behaves like Kexi.
Comment 5 Jarosław Staniek 2015-04-22 22:03:35 UTC
Git commit bd4ab9a91ad288f7be54472d12181c6ba005e4b0 by Jaroslaw Staniek, on behalf of Roman Shtemberko.
Committed on 22/04/2015 at 21:40.
Pushed by staniek into branch 'calligra/2.9'.

Remove "dirty" flag when saving-as modified Kexi object
REVIEW:123357

M  +2    -0    kexi/core/KexiWindow.cpp

http://commits.kde.org/calligra/bd4ab9a91ad288f7be54472d12181c6ba005e4b0