Remove "dirty" flag when saving-as modified Kexi object

BUG:344653
REVIEW:123357